@startuml

class Main {
    - static Game game;
    + static void main(String[] args)
}

class Game {
    - final FileIO fileIO;
    - final TextUI textUI;
    - final ArrayList<Player> players;
    - int startValue;
    - int maxPlayers;
    + Game()
    + void gameSetup()
    + void displayPlayers()
    - void createPlayers(ArrayList<String> data)
}

class Player {
    - final String name;
    - int amount;
    + Player(String name, int amount)
    + String getName()
    + int getAmount()
    + void setAmount(int amount)
}

class TextUI {
    - static Scanner scanner;
    + String getUserInput(String msg)
    + ArrayList<String> data getUserInput(String msg, int iterations)
    + int getUserInput(String msg, ArrayList<String> data)
}

class FileIO {
    + static void writeGameData(ArrayList<Player> players)
    + static ArrayList<String> data readGameData()
}

Main *-- Game

Game *-- "2...6" Player
Game *-- TextUI
Game *-- FileIO

@enduml